Added first link as a new menu item in Jira

--- a/src/main/resources/pluginTest.properties
+++ b/src/main/resources/pluginTest.properties
@@ -3,3 +3,11 @@ my.plugin.name=MyPlugin
 section-test.label=sectionTest
 section-test.name=sectionTest
 section-test.description=The sectionTest Plugin
+
+my-item.label=myItem
+my-item.name=myItem
+my-item.description=The myItem Plugin
+
+atlassian-developers-site.label=Atlassian Developers Site
+atlassian-developers-site.name=Atlassian Developers Site
+atlassian-developers-site.description=The Atlassian Developers Site Plugin
